fixed that hypothesis wrapper did not resize when sidebar collapsed

--- a/main/src/main/webapp/app/stylesheets/style.scss
+++ b/main/src/main/webapp/app/stylesheets/style.scss
@@ -31,6 +31,10 @@ body {
     .learn-start-wrapper {
       margin-left: $sidebar-width-collapsed;
     }
+
+    .learn-results-compare-wrapper {
+      left: 0;
+    }
   }
 
   &.has-fixed-action-bar {
